@@ -9,6 +9,7 @@ group :development, :test do
   gem "cucumber-rails"
   gem "pickle"
   gem "capybara"
+  gem "rspec", ">= 2.0.1"  
   gem "rspec-rails", ">= 2.0.1"  
 
   # cucumber-fm  
@@ -17,12 +18,14 @@ end
 
 gem "mongrel", '>= 1.2.0.pre2'
 
+gem 'formtastic', '>= 1.1.0'
+
 # gem 'json',  :branch => 'never_use_iconv', :git => 'git://github.com/sorah/json'
 
 # Authentication, Authorization and Roles
-gem "devise"
-gem "cream"
-gem "roles_mongoid"
+gem "devise", '>= 1.1'
+gem "cream", '>= 0.8.2'
+gem "roles_mongoid", '>= 0.3.4'
 
 # Controller
 gem 'inherited_resources'
@@ -30,14 +33,23 @@ gem 'inherited_resources'
 # View
 gem "slim"
 gem "slim-rails"
+gem "compass"
 gem "haml", ">= 3.0.0"
 
 # CAPTCHA
-gem 'recaptcha' , :git => 'https://github.com/davout/recaptcha.git'
+gem "recaptcha" , :git => 'https://github.com/davout/recaptcha.git'
 
 # Image upload for Mongoid
 gem "carrierwave", :git => 'https://github.com/jnicklas/carrierwave.git'
 
+# i18n
+# gem "e9s", ">= 2.2.6"
+# gem "rich_cms", :git => 'git://github.com/kristianmandrup/rich_cms.git'
+
+# Payment
+gem "active_merchant"
+
 # Google Maps
 gem "bhm-google-maps", :git => 'https://github.com/YouthTree/bhm-google-maps.git'
 gem "geokit-rails3", :git => 'https://github.com/jlecour/geokit-rails3.git'
+
